# Fractals

./: .gitignore  CMakeLists.txt  main.cpp
include/: Complex.h  MandelbrotSet.h  Primitives.h  Render.h
source/: Complex.cpp  MandelbrotSet.cpp  Primitives.cpp  Render.cpp
